<resources>
    <string name="app_name">Religious pro</string>
    <string name="action_settings">Action_settings</string>
    <string name="profile">Profile</string>
    <string name="achievements">Achievements</string>
    <string name="weekly_summary">Weekly Summary</string>
    <string name="for_you">For You</string>
    <string name="events">Events</string>
    <string name="setting">Setting</string>
    <string name="info">Info</string>
    <string name="version">Version</string>
    <string name="duas">Duas</string>
    <string name="inspiration">Inspiration</string>
    <string name="calendar">Calendar</string>
    <string name="cummunity">Cummunity</string>
    <string name="re_arrange">Re Arrange</string>
    <string name="verse_of_the_day">Verse of the Day</string>
    <string name="an_nisaa_4_24">An-Nisaa(4:24)</string>
    <string name="share">Share</string>
    <string name="read">Read</string>
    <string name="make_dua_for_the_ummah">Make dua for the Ummah</string>
    <string name="make_dua">Make Dua</string>
    <string name="surah">SURAH</string>
    <string name="aayat">AAYAT</string>
    <string name="juz">JUZ</string>
    <string name="my_quran">MY QURAN</string>
    <string name="quran">Quran</string>
    <string name="qibla">Qibla</string>
    <string name="prayer">Prayer</string>
    <string name="today_s">Today\'s</string>
    <string name="more">More</string>
    <string name="allah_names">Allah Names</string>


    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok">Settings</string>
    <string name="settings_button_cancel">Cancel</string>
    <string name="msg_permission_not_granted_yet">Location access not available yet</string>
    <string name="msg_permission_granted">Location Access Granted, press GPS button now.</string>
    <string name="toast_permission_required">This app requires Access Location</string>
    <string name="your_location">Your Location:</string>
    <string name="location_not_ready">Location not ready, please press button again.</string>
    <string name="qibla_direction">Kaaba Direction:</string>
    <string name="pls_enable_location">Please turn on Location and press the button again.</string>
    <string name="degree_from_north">degrees from the north.</string>
    <string name="using_last_location">using last location.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>
