<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_goneMarginBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innercard2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameinnercard2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/fill_circle_grey"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_chrome_reader_mode_black_24dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/titlecard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/verse_of_the_day"
                android:textColor="#323035"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/frameinnercard2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subTitlecard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/an_nisaa_4_24"
                android:textColor="#D8D7D9"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/frameinnercard2"
                app:layout_constraintTop_toBottomOf="@+id/titlecard2" />

            <TextView
                android:id="@+id/contentcard2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="It would be reasonable to assume that dedicated attributes exist in order to specify chains in XML, but this is not, in fact, the case. Instead the existing constraint attributes are combined. To create chains in XML the chain constraints are simply two way, complementary constraints. Here is the XML for the initial chain creation that we looked at earlier:"
                android:textColor="#67656B"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameinnercard2" />

            <TextView
                android:id="@+id/maringcard2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#F2F0F6"
                app:layout_constraintTop_toBottomOf="@+id/contentcard2" />

            <TextView
                android:id="@+id/textViewcard2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:drawableStart="@drawable/ic_featured_play_list_black_24dp"
                android:drawablePadding="15dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/read"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maringcard2" />

            <TextView
                android:id="@+id/textView2card2"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:drawableStart="@drawable/ic_share_black_24dp"
                android:drawablePadding="15dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maringcard2"

                tools:text="TextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>